#5020 closed bug (fixed)
[app_server] focus issue with CPUFrequency
Reported by: | diver | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Servers/app_server | Version: | R1/alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Open /boot/system/preferences.
Select Backgrounds, CPUFrequency, DataTranslators and hit enter.
Wait until they all gets loaded.
Now close them one by one using alt+w, you should notice that CPUFrequency will not be active as you would expect.
Tested with hrev34194 in VirtualBox 3.0.12
Change History (4)
comment:1 by , 15 years ago
comment:2 by , 15 years ago
Just started looking into it, and the issue is caused by the B_AVOID_FRONT flag that CPUFrequency is using without any reason.
Note:
See TracTickets
for help on using tickets.
This is reproducible only in "click to focus/activate" modes - in FFM it works as expected (which is strange, as these modes should be the same unless you move the mouse).