* Always take the last window when choosing a new focus window in normal mouse   mode. This fixes focus issues as describen in bug #5020.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@34456 a95241bf-73f2-0310-859d-f6bbb57e9c96